chore: eval で利用する設定を追加
暫定。あとで追加できるものは追加する。

--- a/config.json
+++ b/config.json
@@ -1,3 +1,14 @@
 {
-    "prefix": "!bot"
+    "prefix": "!bot",
+    "eval": {
+        "languages": [
+            {
+                "names": ["python", "py"],
+                "source": "main.py",
+                "steps": [
+                    "/usr/bin/python3 main.py"
+                ]
+            }
+        ]
+    }
 }
